app/javascript/styles/mastodon/components.scss
/* ... */
.report-modal {
  width: 90vw;
  max-width: 700px;
}

.report-dialog-modal {
  max-width: 90vw;
  width: 480px;
  height: 80vh;
  background: var(--background-color);
  color: $primary-text-color;
  border-radius: 4px;
  border: 1px solid var(--background-border-color);
  overflow: hidden;
  position: relative;
  flex-direction: column;
  display: flex;

  &__container {
    box-sizing: border-box;
    border-top: 1px solid var(--background-border-color);
    padding: 20px;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    min-height: 0;
    overflow: auto;
  }

  &__title {
    font-size: 28px;
    line-height: 33px;
    font-weight: 700;
    margin-bottom: 15px;

    @media screen and (height <= 800px) {
      font-size: 22px;
    }
  }

  &__subtitle {
    font-size: 17px;
    font-weight: 600;
    line-height: 22px;
    margin-bottom: 4px;
  }

  &__lead {
    font-size: 17px;
    line-height: 22px;
    color: $secondary-text-color;
    margin-bottom: 30px;

    a {
      text-decoration: none;
      color: $inverted-text-color;
      font-weight: 500;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  &__actions {
    margin-top: 30px;
    display: flex;

    .button {
      flex: 1 1 auto;
    }
  }

  &__statuses {
    flex-grow: 1;
    min-height: 0;
    overflow: auto;
  }

  .status__content a {
    color: $highlight-text-color;
  }

  .status__content,
  .status__content p {
    color: $primary-text-color;
  }

  .status__content__spoiler-link {
    color: $primary-text-color;
    background: $ui-primary-color;

    &:hover {
      background: lighten($ui-primary-color, 8%);
    }
  }

  .dialog-option {
    align-items: center;
    gap: 12px;
  }

  .dialog-option .poll__input {
    border-color: $inverted-text-color;
    color: $ui-secondary-color;
    display: inline-flex;
    align-items: center;
    justify-content: center;

    svg {
      width: 15px;
      height: 15px;
    }

    &:active,
    &:focus,
    &:hover {
      border-color: lighten($inverted-text-color, 15%);
      border-width: 4px;
    }

    &.active {
      border-color: $inverted-text-color;
      background: $inverted-text-color;
    }
  }

  .poll__option.dialog-option {
    padding: 15px 0;
    flex: 0 0 auto;
    border-bottom: 1px solid var(--background-border-color);

    &:last-child {
      border-bottom: 0;
    }

    & > .poll__option__text {
      font-size: 13px;
      color: $secondary-text-color;

      strong {
        font-size: 17px;
        font-weight: 500;
        line-height: 22px;
        color: $primary-text-color;
        display: block;
        margin-bottom: 4px;

        &:last-child {
          margin-bottom: 0;
        }
      }
    }
  }

  .flex-spacer {
    background: transparent;
  }

  &__textarea {
    display: block;
    box-sizing: border-box;
    width: 100%;
    color: $primary-text-color;
    background: $ui-base-color;
    padding: 10px;
    font-family: inherit;
    font-size: 17px;
    line-height: 22px;
    resize: vertical;
    border: 0;
    border: 1px solid var(--background-border-color);
    outline: 0;
    border-radius: 4px;
    margin: 20px 0;

    &:focus {
      outline: 0;
    }
  }

  &__toggle {
    display: flex;
    align-items: center;
    margin-bottom: 16px;
    gap: 8px;

    & > span {
      display: block;
      font-size: 14px;
      font-weight: 500;
      line-height: 20px;
    }
  }

  .button.button-secondary {
    border-color: $ui-button-destructive-background-color;
    color: $ui-button-destructive-background-color;
    flex: 0 0 auto;

    &:hover,
    &:focus,
    &:active {
      background: $ui-button-destructive-background-color;
      border-color: $ui-button-destructive-background-color;
      color: $white;
    }
  }

  hr {
    border: 0;
    background: transparent;
    margin: 15px 0;
  }

  .emoji-mart-search {
    padding-inline-end: 10px;
  }

  .emoji-mart-search-icon {
    inset-inline-end: 10px + 5px;
  }
}

.report-modal__container {
  display: flex;
  border-top: 1px solid $ui-secondary-color;

  @media screen and (width <= 480px) {
    flex-wrap: wrap;
    overflow-y: auto;
  }
}

.report-modal__statuses,
.report-modal__comment {
  box-sizing: border-box;
  width: 50%;
  min-width: 50%;

  @media screen and (width <= 480px) {
    width: 100%;
  }
}

.report-modal__statuses,
.focal-point-modal__content {
  flex: 1 1 auto;
  min-height: 20vh;
  max-height: 80vh;
  overflow-y: auto;
  overflow-x: hidden;

  .status__content a {
    color: $highlight-text-color;
  }

  .status__content,
  .status__content p {
    color: $inverted-text-color;
  }

  @media screen and (width <= 480px) {
    max-height: 10vh;
  }
}

.focal-point-modal__content {
  @media screen and (width <= 480px) {
    max-height: 40vh;
  }
}

.setting-divider {
  background: transparent;
  border: 0;
  margin: 0;
  width: 100%;
  height: 1px;
  margin-bottom: 29px;
}

.report-modal__comment {
  padding: 20px;
  border-inline-end: 1px solid $ui-secondary-color;
  max-width: 320px;

  p {
    font-size: 14px;
    line-height: 20px;
    margin-bottom: 20px;
  }

  .setting-text-label {
    display: block;
    color: $inverted-text-color;
    font-size: 14px;
    font-weight: 500;
    margin-bottom: 10px;
  }

  .setting-text {
    width: 100%;
    resize: none;
    min-height: 100px;
    max-height: 50vh;
    border: 0;

    @media screen and (height <= 600px) {
      max-height: 20vh;
    }

    @media screen and (max-width: $no-columns-breakpoint) {
      max-height: 20vh;
    }
  }

  .setting-toggle {
    margin-top: 20px;
    margin-bottom: 24px;

    &__label {
      color: $inverted-text-color;
      font-size: 14px;
    }
  }

  @media screen and (width <= 480px) {
    padding: 10px;
    max-width: 100%;
    order: 2;

    .setting-toggle {
      margin-bottom: 4px;
    }
  }
}
/* ... */

